docs: update README for Gemini provider, position column, action field
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>